--- a/Blog-MVC/views/index.html
+++ b/Blog-MVC/views/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
   
-    <title>Blog</title>
+    <title>JumboTron</title>
 
     <link rel="stylesheet" type="text/css" href="/static/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/static/jumbotron-narrow.css">
@@ -20,18 +20,18 @@
             <li role="presentation" class="active"><a href="#">Login</a></li>
           </ul>
         </nav>
-        <a href="/"><h3 class="text-muted">Blog</h3></a>
+        <a href="/"><h3 class="text-muted">JumboTron</h3></a>
       </div>
 
       <div class="jumbotron">
-        <h1>Blogging Every Movement</h1>
-        <p class="lead">Blog is  a open-source bloging platform created by Urvil Patel.This Bloging Platform's backend is writtern in Python with use of Bottle micro-framework and using MongoDB as a database.</p>
+        <h1 id="h1_heading">Blogging Every Movement</h1>
+        <p class="lead">JumboTron is  a open-source blogging platform created by Urvil Patel.This Blogging Platform's backend is writtern in Python with use of Bottle micro-framework and using MongoDB as a database.</p>
         <p><a class="btn btn-lg btn-success" href="signup" role="button">Sign up</a></p>
       </div>
 
 
       <footer class="footer">
-        <p>&copy; 2016 Urvil Patel</p>
+        <p>&copy; 2016 Urvil Patel.</p>
       </footer>
 
     </div> <!-- /container -->
