--- a/Blog-MVC/views/index.html
+++ b/Blog-MVC/views/index.html
@@ -17,7 +17,7 @@
       <div class="header clearfix">
         <nav>
           <ul class="nav nav-pills pull-right">
-            <li role="presentation" class="active"><a href="#">Login</a></li>
+            <li role="presentation" class="active"><a href="login">Login</a></li>
           </ul>
         </nav>
         <a href="/"><h3 class="text-muted">JumboTron</h3></a>
@@ -26,7 +26,7 @@
       <div class="jumbotron">
         <h1 id="h1_heading">Blogging Every Movement</h1>
         <p class="lead">JumboTron is  a open-source blogging platform created by Urvil Patel.This Blogging Platform's backend is writtern in Python with use of Bottle micro-framework and using MongoDB as a database.</p>
-        <p><a class="btn btn-lg btn-success" href="signup" role="button">Sign up</a></p>
+        <p><a class="btn btn-lg btn-success" href="signup" role="button">Signup Now</a></p>
       </div>
 
 
