Adding more css

--- a/Blog-MVC/views/index.html
+++ b/Blog-MVC/views/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
   
-    <title>JumboTron</title>
+    <title>JumboBlog</title>
 
     <link rel="stylesheet" type="text/css" href="/static/bootstrap.css">
     <link rel="stylesheet" type="text/css" href="/static/jumbotron-narrow.css">
@@ -20,12 +20,12 @@
             <li role="presentation" class="active"><a href="login">Login</a></li>
           </ul>
         </nav>
-        <a href="/"><h3 class="text-muted">JumboTron</h3></a>
+        <a href="/"><h3 class="text-muted">JumboBlog</h3></a>
       </div>
 
       <div class="jumbotron">
         <h1 id="h1_heading">Blogging Every Movement</h1>
-        <p class="lead">JumboTron is  a open-source blogging platform created by Urvil Patel.This Blogging Platform's backend is writtern in Python with use of Bottle micro-framework and using MongoDB as a database.</p>
+        <p class="lead">JumboBlog is  a open-source blogging platform created by Urvil Patel.This Blogging Platform's backend is writtern in Python with use of Bottle micro-framework and using MongoDB as a database.</p>
         <p><a class="btn btn-lg btn-success" href="signup" role="button">Signup Now</a></p>
       </div>
 
