--- a/Blog-MVC/views/index.html
+++ b/Blog-MVC/views/index.html
@@ -29,15 +29,20 @@
         <p><a class="btn btn-lg btn-success" href="signup" role="button">Signup Now</a></p>
       </div>
 
+       <div class="jumbotron">
+        <img src="static/github.png" alt="Githublogo" class="github"/>
+        <p class="lead">If you want to contrubute on this project then see my github repository and I welcome every one who intrested in contrubute or even add more extra features in this projects</p>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/urvil38/blog" role="button">Check Now</a></p>
+      </div>
+
 
       <footer class="footer">
+      <a href="http://www.facebook.com/urvil.patel.104"><img src="static/facebook-wrap.png" alt="Facebooklogo" class="social-icon"/></a>
+          <a href="http://www.twitter.com/UrvilPatel12"><img src="static/twitter-wrap.png" alt="Twitterlogo" class="social-icon"/></a>
         <p>&copy; 2016 Urvil Patel.</p>
       </footer>
 
     </div> <!-- /container -->
 
-
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
