--- a/Blog-MVC/static/jumbotron-narrow.css
+++ b/Blog-MVC/static/jumbotron-narrow.css
@@ -19,6 +19,9 @@ img{
   margin-right: 7px;
 }
 
+.form-horizontal{
+  margin-top: 55px;
+}
 
 #form{
   max-width: 720px;
@@ -28,7 +31,8 @@ img{
 
 #form_entry{
   max-width: 720px;
-  margin-left: 20px;
+  margin-left: 76px;
+  margin-top: -30px;
 }
 
 
@@ -48,7 +52,8 @@ img{
 
 .button_signup {
   margin-left: 90%;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
+  margin-top: 5px;
 }
 
 /* Custom page header */
@@ -77,6 +82,7 @@ a:hover{
   color: #777;
   border-top: 1px solid #a8a49e;
   text-align: center;
+  margin-top: 30px;
 }
 
 /* Customize container */
@@ -99,7 +105,8 @@ a:hover{
   width: 20px;
   height: 20px;
   margin: 0 5px;
-  margin-bottom: 4px;
+  margin-bottom: 8px;
+  margin-top: 10px;
 }
 
 .posts {
@@ -129,6 +136,7 @@ a:hover{
 
 .post_body p{
   font-size: 15px;
+  margin-top: -3px;
 }
 
 .jumbotron .btn {
