--- a/Blog-MVC/views/index.html
+++ b/Blog-MVC/views/index.html
@@ -11,7 +11,11 @@
 
   </head>
 
-  <body>
+  <body style="  background-image: url('static/images.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;">
 
     <div class="container">
       <div class="header clearfix">
@@ -20,7 +24,7 @@
             <li role="presentation" class="active"><a href="login">Login</a></li>
           </ul>
         </nav>
-        <a href="/"><h3 class="text-muted">JumboBlog</h3></a>
+        <a href="/"><h3>JumboBlog</h3></a>
       </div>
 
       <div class="jumbotron">
@@ -32,7 +36,7 @@
        <div class="jumbotron">
         <img src="static/github.png" alt="Githublogo" class="github"/>
         <p class="lead">If you want to contrubute on this project then see my github repository and I welcome every one who intrested in contrubute or even add more extra features in this projects</p>
-        <p><a class="btn btn-lg btn-success" href="https://github.com/urvil38/blog" role="button">Check Now</a></p>
+        <p><a class="btn btn-lg btn-success" href="https://github.com/urvil38/blog" target="_blank" role="button">Check Now</a></p>
       </div>
 
 
@@ -42,7 +46,6 @@
         <p>&copy; 2016 Urvil Patel.</p>
       </footer>
 
-    </div> <!-- /container -->
-
+    </div> 
   </body>
 </html>
