--- a/Blog-MVC/static/bootstrap.css
+++ b/Blog-MVC/static/bootstrap.css
@@ -2880,7 +2880,7 @@ select[multiple].input-lg {
 .has-error.checkbox label,
 .has-error.radio-inline label,
 .has-error.checkbox-inline label {
-  color: #a94442;
+  color: rgb(255, 36, 32);
 }
 .has-error .form-control {
   border-color: #a94442;
